[gd_scene load_steps=4 format=3 uid="uid://by1ijr7rwlm80"]

[ext_resource type="Script" path="res://ships/Ship.gd" id="1_xmaqh"]
[ext_resource type="Texture2D" uid="uid://c8mq4osq01k7d" path="res://assets/art/ships/ship-1.png" id="2_ofbmu"]
[ext_resource type="Script" path="res://LifeComponent.gd" id="3_h6lcw"]

[node name="Ship" type="RigidBody2D"]
script = ExtResource("1_xmaqh")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_ofbmu")

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]

[node name="Thrusters" type="Node2D" parent="."]

[node name="Up" type="Node2D" parent="Thrusters"]

[node name="Down" type="Node2D" parent="Thrusters"]

[node name="LeftUp" type="Node2D" parent="Thrusters"]

[node name="LeftDown" type="Node2D" parent="Thrusters"]

[node name="RightUp" type="Node2D" parent="Thrusters"]

[node name="RightDown" type="Node2D" parent="Thrusters"]

[node name="LifeComponent" type="Node" parent="."]
script = ExtResource("3_h6lcw")
hp = 100
max_hp = 100
